spacing fixes (headings in blockquotes)

--- a/docgen/doc/public/style.css
+++ b/docgen/doc/public/style.css
@@ -635,3 +635,7 @@ sup {
 	margin-bottom: -10px;
 	font-size: 16px;
 }
+
+blockquote > .heading:first-child {
+	margin-top: 0;
+}
